[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game/Assets/Fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/Assets/Images/backpack.png" type="Texture" id=2]
[ext_resource path="res://Game/GUIComponents/PlayerIndicators/Backpack.gd" type="Script" id=3]
[ext_resource path="res://Game/Assets/Images/Items/items.png" type="Texture" id=4]
[ext_resource path="res://shaders/shaders/blur.shader" type="Shader" id=5]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 32 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.239216, 0.184314, 0.133333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.282353, 0.231373, 0.180392, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 2
shadow_color = Color( 0, 0, 0, 0.243137 )
shadow_size = 1
shadow_offset = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=6]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/radius = 8.0

[sub_resource type="SphereMesh" id=3]
radius = 14.0
height = 28.0
radial_segments = 4
rings = 128

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.486425 )
colors = PoolColorArray( 0.36, 0.2886, 0.234, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[node name="BackPack" type="Control"]
margin_right = 272.0
margin_bottom = 64.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visual" type="TextureRect" parent="."]
light_mask = 0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backpack_mouse_detector" type="Area2D" parent="Visual"]
light_mask = 0
monitorable = false

[node name="Square" type="CollisionShape2D" parent="Visual/Backpack_mouse_detector"]
light_mask = 0
position = Vector2( 32, 32 )
shape = SubResource( 7 )

[node name="BackpackOpen" type="Panel" parent="."]
margin_left = 72.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Label" parent="BackpackOpen"]
light_mask = 0
margin_top = -21.0
margin_right = 184.0
grow_vertical = 0
custom_fonts/font = SubResource( 6 )
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Control" parent="BackpackOpen"]
anchor_left = 0.043
anchor_top = 0.083
anchor_right = 0.957
anchor_bottom = 0.917
margin_left = 0.0879998
margin_top = 0.0159996
margin_right = -0.0879822
margin_bottom = -0.0160065
rect_min_size = Vector2( 0, 40 )
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Control" parent="BackpackOpen/Content"]
anchor_top = -0.125
anchor_right = 1.0
anchor_bottom = 1.125
margin_top = 5.0
margin_bottom = -5.0
rect_min_size = Vector2( 168, 40 )
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="Control" parent="BackpackOpen/Content/Items"]
anchor_left = 0.054
anchor_right = 0.054
margin_left = -1.072
margin_top = 4.0
margin_right = 30.928
margin_bottom = 36.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Circle" type="MeshInstance2D" parent="BackpackOpen/Content/Items/Selection"]
light_mask = 0
material = SubResource( 2 )
position = Vector2( 16, 16 )
mesh = SubResource( 3 )
texture = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Item1" type="TextureButton" parent="BackpackOpen/Content/Items"]
margin_left = 8.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 36.0
focus_mode = 0
mouse_default_cursor_shape = 2
action_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ankh" type="Sprite" parent="BackpackOpen/Content/Items/Item1"]
light_mask = 0
texture = ExtResource( 4 )
centered = false
vframes = 10
hframes = 10
frame = 17
__meta__ = {
"_editor_description_": ""
}

[node name="AnkhCount" type="Label" parent="BackpackOpen/Content/Items/Item1"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -19.0
margin_right = 16.0
margin_bottom = 4.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Item2" type="TextureButton" parent="BackpackOpen/Content/Items"]
margin_left = 48.0
margin_top = 4.0
margin_right = 80.0
margin_bottom = 36.0
focus_mode = 0
mouse_default_cursor_shape = 2
action_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Torch" type="Sprite" parent="BackpackOpen/Content/Items/Item2"]
light_mask = 0
texture = ExtResource( 4 )
centered = false
vframes = 10
hframes = 10
frame = 10
__meta__ = {
"_editor_description_": ""
}

[node name="TorchCount" type="Label" parent="BackpackOpen/Content/Items/Item2"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -19.0
margin_right = 16.0
margin_bottom = 4.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Item3" type="TextureButton" parent="BackpackOpen/Content/Items"]
margin_left = 88.0
margin_top = 4.0
margin_right = 120.0
margin_bottom = 36.0
focus_mode = 0
mouse_default_cursor_shape = 2
action_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" type="Sprite" parent="BackpackOpen/Content/Items/Item3"]
light_mask = 0
texture = ExtResource( 4 )
centered = false
vframes = 10
hframes = 10
frame = 1
__meta__ = {
"_editor_description_": ""
}

[node name="FoodCount" type="Label" parent="BackpackOpen/Content/Items/Item3"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -19.0
margin_right = 16.0
margin_bottom = 4.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Item4" type="TextureButton" parent="BackpackOpen/Content/Items"]
margin_left = 128.0
margin_top = 4.0
margin_right = 160.0
margin_bottom = 36.0
focus_mode = 0
mouse_default_cursor_shape = 2
action_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jar" type="Sprite" parent="BackpackOpen/Content/Items/Item4"]
light_mask = 0
texture = ExtResource( 4 )
centered = false
vframes = 10
hframes = 10
frame = 3
__meta__ = {
"_editor_description_": ""
}

[node name="JarCount" type="Label" parent="BackpackOpen/Content/Items/Item4"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -19.0
margin_right = 16.0
margin_bottom = 4.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0
[connection signal="input_event" from="Visual/Backpack_mouse_detector" to="." method="backpack_mouse_clicked"]
[connection signal="mouse_entered" from="Visual/Backpack_mouse_detector" to="." method="open"]
[connection signal="mouse_entered" from="BackpackOpen/Content/Items/Item1" to="." method="select_item" binds= [ "ANKH" ]]
[connection signal="mouse_exited" from="BackpackOpen/Content/Items/Item1" to="." method="unselect_item"]
[connection signal="pressed" from="BackpackOpen/Content/Items/Item1" to="." method="click_item" binds= [ "ANKH" ]]
[connection signal="mouse_entered" from="BackpackOpen/Content/Items/Item2" to="." method="select_item" binds= [ "TORCH" ]]
[connection signal="mouse_exited" from="BackpackOpen/Content/Items/Item2" to="." method="unselect_item"]
[connection signal="pressed" from="BackpackOpen/Content/Items/Item2" to="." method="click_item" binds= [ "TORCH" ]]
[connection signal="mouse_entered" from="BackpackOpen/Content/Items/Item3" to="." method="select_item" binds= [ "FOOD" ]]
[connection signal="mouse_exited" from="BackpackOpen/Content/Items/Item3" to="." method="unselect_item"]
[connection signal="pressed" from="BackpackOpen/Content/Items/Item3" to="." method="click_item" binds= [ "FOOD" ]]
[connection signal="mouse_entered" from="BackpackOpen/Content/Items/Item4" to="." method="select_item" binds= [ "JAR" ]]
[connection signal="mouse_exited" from="BackpackOpen/Content/Items/Item4" to="." method="unselect_item"]
[connection signal="pressed" from="BackpackOpen/Content/Items/Item4" to="." method="click_item" binds= [ "JAR" ]]
[connection signal="tween_all_completed" from="Tween" to="." method="bptween_completed"]
